# fastapi

./: .env  LICENSE.md  README.md  alembic.ini  crud_tut.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 5c24914fd995_add_password_hash.py  b9e241f0484e_init.py
src/: config.py  errors.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: __init__.py  book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: __init__.py  main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
