[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.3",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.11.0",
    "aioredis>=2.0.1",
    "aiosqlite>=0.22.1",
    "passlib>=1.7.4",
    "distutils",
]
